--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Homestreet Blog</title>
+  <title>Homestreet</title>
   <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
   <header>
-    <h1>Homestreet Blog</h1>
+    <h1>Homestreet</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="pages/about.html">About</a>
@@ -17,11 +17,13 @@
     </nav>
   </header>
   <main class="main-content">
-    <h2>Welcome to Homestreet</h2>
-    <p>This is a placeholder introduction for the Homestreet blog. Explore our posts and learn more about us.</p>
+    <h2>Welcome to Homestreet Blog</h2>
+    <p>Welcome to a place designed for the exchange of ideas and the advancement of exclusive contents. This platform exists to empower its user by providing the tools and insight neccesary for success in a rapidly changing enviroment.</p>
+    <p>By providing a streamlined accessible interface and curated contents, progress is a product of collective effort. This site aims to foster an enviroment where knowledge is shared freely and effectively so expect a consistence streams of resources tailored to the needs of a modern audience.</p>
   </main>
   <footer>
-    <p>&copy; 2026 Homestreet Blog</p>
+    <p>&copy; 2026 Homestreet blog</p>
   </footer>
+<script scr="js/main.js"></script>
 </body>
 </html>
