--- a/pages/about.html
+++ b/pages/about.html
@@ -18,11 +18,12 @@
   </header>
   <main class="main-content">
     <h2>About us</h2>
-    <p>This platform is bein established to serve as a progressive resourse for all users. The primary objective is to provide high-quality, data driven insighs that helps navigate the complexities of the morderm digital landscape.<p/>
-    <p>The site is currently in it's foundation phase, built primarily using <strong>html amd css</srong> The focus at this stage is on estblishing a clean accessible structure and responsive design. As the technical infrastructure evolves beyound the core styling and layout levels, iterative updates will be implemented and ensures that the tho the site will remain lightweight, efficient, as it aligns with progressive web standards during its growth</p>
+    <p>This platform is being established to serve as a progressive resourse for all users. The primary objective is to provide high-quality, data driven insighs that helps navigate the complexities of the morderm digital landscape.<p/>
+    <p>The site is currently in it's foundation phase, built primarily using <strong>html and css.</strong> The focus at this stage is on establishing a clean accessible structure and responsive design. As the technical infrastructure evolves beyound the core styling and layout levels, iterative updates will be implemented and ensures even though the site will remain lightweight, but also efficient, as it aligns with progressive web standards during its development.</p>
   </main>
   <footer>
     <p>&copy; 2026 Homestreet Blog</p>
   </footer>
+<script scr="../js/main.js"></script>
 </body>
 </html>
