--- a/pages/posts.html
+++ b/pages/posts.html
@@ -24,15 +24,9 @@
       <p>The launch of this platform marks a commitment to modernizing how information regarding explicite blogs and contents is accessed and utilized. This site serves as a central hub for forward-thinking analysis and collaborative growth in contents and updates.</P>
     </article>
     <article>
-      <h3>The Community-Centric Approach</h3>
-      <p><em>Posted on 2026-01-09</em></p>
-      <p>Welcome to a place designed for the exchange of ideas and the advancement of exclusive contents. This platform exists to empower it's user by providing the tools and insights neccesary for success in a rapidly changing enviroment.</p>
-      <p>Progress is a collective effort. By providing a streamlined, accessible interface and curated contents this site aims to foster an enviroment where knowlegde is shared freely and effectively. After the next post, expect a consistence streams of resources tailored to the needs of a modern audience.</p>
-    </article>
-    <article>
       <h3>The Technical/Funtional Aprroach</h3>
       <p><em>Posted on 2026-01-10</em></p>
-      <p>Lorem ipThe design and development of this website is being established to provide a structured, objective, and comprehensive look at articles and updates. The objective is to eliminate noise and provide high-utility content that priotizes efficiency and factual accuracy.</p>
+      <p>The design and development of this website is being established to provide a structured, objective, and comprehensive look at articles and updates. The objective is to eliminate noise and provide high-utility content that priotizes efficiency and factual accuracy.</p>
     </article>
   </main>
   <footer>
