--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
   }
 </script>
 <script>
-  const menuBtn = document.querySelector(".menu-btn");
-  const sidebar = document.querySelector(".sidebar-nav");
+  const menuBtn = document.querySelector('.menu-btn');
+  const sidebar = document.querySelector('.sidebar-nav');
 
-  menuBtn.addEventListener("click", function () {
-    sidebar.classList.btn("open");
+  menuBtn.addEventListener("click;, function () {
+    sidebar.classList.btn('open');
   });
 </script>
 <script>
