--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <a href="pages/posts.html">Blog</a>
       <a href="pages/contact.html">Contact</a>
     </nav>
-    <button id="menu-btn" class="menu-btn" type="button" aria-label="Open navigation menu">
+    <button class="menu-btn" type="button" aria-label="Open navigation menu">
       MENU
     </button>
   </header>
   <div class="overlay"></div>
-    <nav id="sidebar" class="sidebar-nav" aria-label="Sidebar navigation">
+    <nav class="sidebar-nav" aria-label="Sidebar navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="pages/news.html">News</a></li>
